// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagedTable should render a page-full of items, with defaults 1`] = `
<Fragment>
  <TableSearchBar
    fieldsToSearch={Array []}
    isEnabled={false}
    items={
      Array [
        Object {
          "age": 29,
          "name": "Jess",
        },
        Object {
          "age": 43,
          "name": "Becky",
        },
        Object {
          "age": 31,
          "name": "Thomas",
        },
      ]
    }
    maxCountExceeded={false}
    onChangeCurrentPage={[Function]}
    onChangeSearchQuery={[Function]}
    placeholder="Search..."
    sortFn={[Function]}
    sortItems={true}
    tableOptions={
      Object {
        "page": Object {
          "index": 0,
          "size": 25,
        },
        "sort": Object {
          "direction": "asc",
          "field": "name",
        },
      }
    }
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "name",
          "name": "Name",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "age",
          "name": "Age",
          "render": [Function],
        },
      ]
    }
    error=""
    items={Array []}
    loading={false}
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    onChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 25,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "showPerPageOptions": true,
        "totalItemCount": 0,
      }
    }
    responsive={true}
    sorting={
      Object {
        "sort": Object {
          "direction": "asc",
          "field": "name",
        },
      }
    }
    tableLayout="fixed"
  />
</Fragment>
`;

exports[`ManagedTable should render when specifying initial values 1`] = `
<Fragment>
  <TableSearchBar
    fieldsToSearch={Array []}
    isEnabled={false}
    items={
      Array [
        Object {
          "age": 29,
          "name": "Jess",
        },
        Object {
          "age": 43,
          "name": "Becky",
        },
        Object {
          "age": 31,
          "name": "Thomas",
        },
      ]
    }
    maxCountExceeded={false}
    onChangeCurrentPage={[Function]}
    onChangeSearchQuery={[Function]}
    placeholder="Search..."
    sortFn={[Function]}
    sortItems={true}
    tableOptions={
      Object {
        "page": Object {
          "index": 1,
          "size": 2,
        },
        "sort": Object {
          "direction": "desc",
          "field": "age",
        },
      }
    }
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "name",
          "name": "Name",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "age",
          "name": "Age",
          "render": [Function],
        },
      ]
    }
    error=""
    items={Array []}
    loading={false}
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    onChange={[Function]}
    pagination={
      Object {
        "pageIndex": 1,
        "pageSize": 2,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "showPerPageOptions": false,
        "totalItemCount": 0,
      }
    }
    responsive={true}
    sorting={
      Object {
        "sort": Object {
          "direction": "desc",
          "field": "age",
        },
      }
    }
    tableLayout="fixed"
  />
</Fragment>
`;
